--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="logo">
 			<a href="/">
-				<%= image_tag("logo.png", alt: "logo")%>
+				<%= image_tag("our_logo.png", alt: "logo")%>
 			</a>
 		</div>
 		<div class="collapse navbar-collapse" id="navbarNav">
