Subtle modifications to style

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -460,10 +460,10 @@ footer {
   color: rgb(155, 151, 151);
 }
 
-.cusion{
+.cusion {
   height: 100px;
 }
 
-.separate{
-  border-top: solid  rgb(92, 90, 90)
+.separate {
+  border-top: solid rgb(92, 90, 90);
 }
