--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,4 +12,7 @@
         </div>
     </div> 
 </div>
+<br>
+<br>
 <!--<button class="btn new"><%= link_to 'Back', users_path %></button>-->
+ <hr class="separate">
