--- a/app/views/preferences/_new_form.html.erb
+++ b/app/views/preferences/_new_form.html.erb
@@ -26,7 +26,7 @@
         </div>
         <div class="col">
             <%= f.label "Pet Preference"%>
-            <%= f.select :pet,["Dog", "Cat", "No"], {include_blank: true}, {class:"form-control"}%>
+            <%= f.select :pet,["Both", "Dog", "Cat", "No"], {include_blank: true}, {class:"form-control"}%>
         </div>
     </div>
     <br>
