--- a/app/views/channels/edit.html.erb
+++ b/app/views/channels/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form', channel: @channel %>
 
-<%= link_to 'Show', @channel %> |
-<%= link_to 'Back', channels_path %>
+<%= link_to 'Back', user_channels_path(current_user) %>
