--- a/app/views/channels/index.html.erb
+++ b/app/views/channels/index.html.erb
@@ -1,29 +1,1 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Channels</h1>
-<br>
-<table class="table table-hover table-striped ml-auto mr-auto" style="width: 50%">
-  <thead class="thead-dark">
-    <tr>
-      <th style="width: 50%">Name</th>
-      <th>Show Messages</th>
-      <th>Edit Name</th>
-      <th>Destroy</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @channels.each do |channel| %>
-      <tr>
-        <td><%= channel.name %></td>
-        <td><%= link_to 'Show Messages', channel %></td>
-        <td><%= link_to 'Edit Name', edit_channel_path(channel) %></td>
-        <td class="table-danger"><%= link_to 'Destroy', channel, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Channel', new_channel_path, class:"btn btn-secondary"%>
+<%= render "channels/channel_sidebar"%>
