--- a/app/views/channels/new.html.erb
+++ b/app/views/channels/new.html.erb
@@ -5,5 +5,5 @@
 
 
 <div class="row justify-content-md-center">
-<%= link_to 'Back', channels_path %>
+<%= link_to 'Back', user_channels_path(current_user) %>
 </div>
