--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -37,7 +37,7 @@
 						<button class="round-shape btn  button-lock nav-link"><%= link_to 'Profile', edit_user_path(current_user) %></button>
 					</li>
 					<li class= "nav-item">
-						<button class="round-shape btn  button-lock nav-link"><%= link_to 'Chat', channels_path %></button>
+						<button class="round-shape btn  button-lock nav-link"><%= link_to 'Chat', user_channels_path(current_user) %></button>
 					</li>	
 					<li class= "nav-item">
 						<button class="round-shape btn  button-lock nav-link"><%= link_to 'Log out', logout_path, method: :delete %></button>
