--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -1,28 +1,5 @@
 <div class="row mt-3" data-controller = "channel" data-channel-id ="<%= @channel.id%>">
-  <div class="col-sm-2">
-    <div class="d-flex justify-content-between">
-      <h6>Channels</h6>
-      <%= link_to fa_icon("plus"), new_channel_path %>
-    </div>
-
-    <% Channel.all.each do |channel| %>
-      <div>
-        <%= link_to channel.name, channel %>
-        <% if current_user.channels.include?(channel) %>
-          <%= link_to fa_icon("times"), channel_channel_user_path(channel), method: :delete %>
-        <% end %>
-      </div>
-    <% end %>
-
-    <hr/>
-
-    <div class="d-flex justify-content-between">
-      <h6>Channel Members</h6>
-    </div>
-    <% @channel.users.each do |user| %>
-      <div><%= user.name %></div>
-    <% end %>
-  </div>
+  <%=render "channels/channel_sidebar"%>
 
   <div class="col-sm-10">
 
@@ -37,11 +14,13 @@
             </ul>
            </div>
       </div>
-      <%= form_with model: [@channel, Message.new], data:{action: "ajax:success->channel#clearMessage"}, local:false do |form| %>
+      <%= form_with model: [current_user, @channel, Message.new], data:{action: "ajax:success->channel#clearMessage"}, local:false do |form| %>
+        
         <%= form.text_field :body, class: "form-control", data:{target: "channel.newMessage"} %>
       <% end %>
+
     <% else %>
-      <button class="btn btn-secondary"><%= link_to "Join #{@channel.name}", channel_channel_user_path(@channel), method: :post %></button>
+      <%= link_to "Join #{@channel.name}", user_channel_channel_user_path(current_user, @channel), method: :post, class:"btn btn-secondary"%>
     <% end %> 
     
   </div>
